Implement ThreadedSafetyNet, safeguard against blocking logger and duplicated messages