@@ -51,6 +51,13 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.vmlens</groupId>
+            <artifactId>api</artifactId>
+            <version>1.1.5</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -58,7 +65,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.10.1</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
@@ -70,6 +77,39 @@
                         <arg>-Xdiags:verbose</arg>
                         <arg>-Xdoclint:-missing</arg>
                     </compilerArgs>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+
+
+            <plugin>
+                <groupId>com.vmlens</groupId>
+                <artifactId>interleave</artifactId>
+                <version>1.1.5</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <trace>
+                        <method>com.darkyen.**</method>
+                    </trace>
+                    <argLine>
+                            --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
